# ai_plz

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: publish.yaml
src/ai_plz/: __init__.py  config.py  prompt.py  reply.py
